--- a/DapperLearn/appsettings.Development.json
+++ b/DapperLearn/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=eShop;Trusted_Connection=True;Integrated Security=True;TrustServerCertificate=True"
   }
 }
